# GA_K01_CPP-CLion

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  First.h  PointPovotTurn.cpp  main.cpp  triangle.h  utils.h  vector.h
